<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/content_description">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textMultiLine"
            android:fontFamily="@font/t_bold"
            android:text="@string/title_1"
            android:textSize="20sp"
            android:textColor="@color/nav_bar_color"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextViewEdits" />


        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motionLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layoutDescription="@xml/activity_main_scene"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_1">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/imageView1"
                android:layout_width="80dp"
                android:layout_height="200dp"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bryce_canyon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:round="16dp" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/fitzgerald_marine_reserve"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imageView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:round="16dp" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/death_valley"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:round="16dp" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/imageView4"
                android:layout_width="80dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/goldengate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent"
                app:round="16dp" />

            <androidx.constraintlayout.helper.widget.Carousel
                android:id="@+id/carousel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:carousel_backwardTransition="@+id/backward"
                app:carousel_firstView="@+id/imageView2"
                app:carousel_forwardTransition="@+id/forward"
                app:carousel_infinite="true"
                app:carousel_nextState="@+id/next"
                app:carousel_previousState="@+id/previous"
                app:constraint_referenced_ids="imageView1,imageView2,imageView3,imageView4" />

        </androidx.constraintlayout.motion.widget.MotionLayout>

        <TextView
            android:id="@+id/tvDesk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_photo"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="@font/t_regular"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/title_1"
            app:layout_constraintStart_toStartOf="@+id/title_1"
            app:layout_constraintTop_toBottomOf="@+id/motionLayout"/>

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="240dp"
            android:background="@drawable/intro_but_back"
            android:elevation="16dp"
            android:padding="8dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/title_1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/title_1"
            app:layout_constraintTop_toBottomOf="@+id/tvDesk" />

        <TextView
            android:id="@+id/tvButtonMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_photo"
            android:textSize="28sp"
            android:textColor="@color/nav_bar_color"
            android:elevation="17dp"
            android:textStyle="bold"
            android:fontFamily="@font/t_bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton1"
            app:layout_constraintEnd_toEndOf="@+id/imageButton1"
            app:layout_constraintStart_toStartOf="@+id/imageButton1"
            app:layout_constraintTop_toTopOf="@+id/imageButton1" />

        <TextView
            android:id="@+id/title_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textMultiLine"
            android:fontFamily="@font/t_bold"
            android:text="@string/title_2"
            android:textSize="20sp"
            android:textColor="@color/nav_bar_color"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/imageButton1"
            app:layout_constraintStart_toStartOf="@+id/imageButton1"
            app:layout_constraintTop_toBottomOf="@+id/imageButton1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
